# SmartMonday_Faster_Python

./: .gitignore  README.md  pyproject.toml
C_code/: mean.c  mean_of_n_firts_numbers.c
notebooks/: mean.ipynb
